<resources>
    <string name="app_name">Scanner</string>
    <string name="upload_image">Click Me</string>
    <string name="camera">imageupload</string>
    <string name="copy">Copy</string>
    <string name="new_scan">New scan</string>
    <string name="share">Share</string>
    <string name="fb_banner_id">YOUR_PLACEMENT_ID</string>
    <string name="policy">Policy</string>
    <string name="rotate_minus_90">Rotate -90º</string>
    <string name="rotate_plus_90">Rotate 90º</string>

</resources>
