<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/copy_text"
        android:icon="@mipmap/ic_content_copy_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/copy"
        >
    </item>
    <item
        android:id="@+id/share_text"
        android:icon="@mipmap/ic_action_name"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        >
    </item>
    <item
        android:id="@+id/new_scan"
        android:icon="@mipmap/ic_open_in_new_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/new_scan"
        >
    </item>
    <item
        android:id="@+id/policy"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom"
        android:title="@string/policy"
        >
    </item>
</menu>