<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        app:titleTextColor="@android:color/white"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:title="@string/app_name"
        android:background="@color/colorPrimary" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainView"
        tools:context=".MainActivity"
        android:gravity="center_vertical|center|center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:id="@+id/textView"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="247dp"
            android:src="@drawable/icon"
            android:contentDescription="@string/camera" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        />


</RelativeLayout>